...
    "tab.home": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "ホーム"
          }
        }
      }
    },
    "tab.allocation": {
      "extractionState": "manual",
...
    "tab.settings": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "設定"
          }
        }
      }
    },
    "home.idle": {
      "extractionState": "manual",
...
